{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 501,
  "lineage": "4df29c89-7f36-d6a1-6965-be2ee1137701",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic1",
            "internal_domain_name_suffix": "z4az01moc2fu5fy1od3homfpqf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip1",
                "subnet_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic1",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIp1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic2",
            "internal_domain_name_suffix": "z4az01moc2fu5fy1od3homfpqf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfiguration2",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip2",
                "subnet_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic2",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIp2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic3",
            "internal_domain_name_suffix": "z4az01moc2fu5fy1od3homfpqf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfiguration3",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip3",
                "subnet_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic3",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIp3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "SecGroupAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic1|/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "network_interface_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic1",
            "network_security_group_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic"
          },
          "dependencies": [
            "azurerm_network_interface.Nic1",
            "azurerm_network_security_group.SecGroup",
            "azurerm_public_ip.PublicIp1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "SecGroupAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic2|/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "network_interface_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic2",
            "network_security_group_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic"
          },
          "dependencies": [
            "azurerm_network_interface.Nic2",
            "azurerm_network_security_group.SecGroup2",
            "azurerm_public_ip.PublicIp2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "SecGroupAssociation3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic3|/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "network_interface_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic3",
            "network_security_group_id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic"
          },
          "dependencies": [
            "azurerm_network_interface.Nic3",
            "azurerm_network_security_group.SecGroup3",
            "azurerm_public_ip.PublicIp3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "location": "westeurope",
            "name": "sshtraffic",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SecGroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "location": "westeurope",
            "name": "sshtraffic",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SecGroup3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "location": "westeurope",
            "name": "sshtraffic",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip1",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip2",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip3",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip3",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "6d9d81cf-178e-4f0b-971b-70fa7730af85",
            "id": "/subscriptions/0b73c45e-7ac8-4136-ae30-ce1064834096/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet",
            "location": "westeurope",
            "name": "kubernetesnet",
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}